--- a/TweetBook/TweetBook.csproj
+++ b/TweetBook/TweetBook.csproj
@@ -58,6 +58,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.1" />
     </ItemGroup>
