--- a/TweetBook/appsettings.json
+++ b/TweetBook/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TweetBook;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "SwaggerOptionsConfig": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "TweetBookAPI",
