Starting with CosmosDB implementation

--- a/TweetBook/appsettings.json
+++ b/TweetBook/appsettings.json
@@ -7,6 +7,11 @@
     "Description": "TweetBookAPI",
     "UIEndpoint": "v1/swagger.json"
   },
+  "CosmosSettings": {
+    "DatabaseName": "restapi",
+    "AccountUri": "https://localhost:8081",
+    "AccountKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
