--- a/TweetBook/TweetBook.csproj
+++ b/TweetBook/TweetBook.csproj
@@ -51,6 +51,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Cosmonaut" Version="2.11.3" />
+      <PackageReference Include="Cosmonaut.Extensions.Microsoft.DependencyInjection" Version="2.3.0" />
+      <PackageReference Include="Humanizer.Core" Version="2.8.26" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
